openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift

spec:
  selector:
    matchLabels:
      app: hello-openshift

  template:
    metadata:
      labels:
        app: hello-openshift

    spec:
      serviceAccountName: hello-sa

      containers:
        - name: nginx-unprivileged
          image: nginxinc/nginx-unprivileged:latest
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
