openshift/storage-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-test

spec:
  containers:
    - name: storage-test
      image: nginxinc/nginx-unprivileged:latest

      volumeMounts:
        - name: persistent-storage
          mountPath: /usr/share/nginx/html

  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: hello-storage
