openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift

spec:
  selector:
    app: hello-openshift

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

  type: ClusterIP
