openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift

spec:
  host: hello-openshift-wislooten-1-dev.apps.rm3.7wse.p1.openshiftapps.com

  to:
    kind: Service
    name: hello-openshift
    weight: 100

  port:
    targetPort: 8080

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

  wildcardPolicy: None
